--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,11 @@
 <resources>
 
     <style name="Theme.WeeklyCheckList" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.tttest" parent="Theme.SplashScreen">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <item name="windowSplashScreenBackground">@color/purple_200</item>
+    </style>
 </resources>
